[project]
name = "button"
version = "0.1"
authors = [
    {name = "Mathys Millet", email = "mathys.millet@estaca.eu"},
    {name = "Maxence Lecouturier", email = "maxence.lecouturier@estaca.eu"},
]
description = "The Button Game"
readme = "README.MD"
dependencies = []

[project.scripts]
button = ""

[tool.coverage.run]
omit = ["*/scripts/*"]